--- a/style.css
+++ b/style.css
@@ -1,29 +1,27 @@
-html, body {
-    margin: 0;
+body {
     box-sizing: border-box;
+    margin: 0;
     height: 100vh;
+    display: grid;
+    grid-template-rows: 2fr 8fr 1fr;
 }
 
-body {
+nav {
+    width: 100vw;
+    padding: 20px;
+    background-color: gray;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .library {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
-    background-color: purple;
-    min-height: 300px;
-    min-width: 300px;
-    color: white;
-    padding: 20px;
+    background-color: antiquewhite;
 }
 
-.card {
+footer {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: gray;
 }
