--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 }
 
 #hidden-form {
+    position: absolute;
     height: 500px;
     width: 500px;
     background-color: purple;
@@ -17,7 +18,7 @@ body {
 }
 
 .hidden {
-    visibility: hidden;
+    display: none;
 }
 
 .library-display {
