--- a/style.css
+++ b/style.css
@@ -9,12 +9,30 @@ body {
     height: 100vh;
 }
 
-#hidden-form {
+.hidden-form {
     position: absolute;
-    height: 500px;
-    width: 500px;
-    background-color: purple;
-    
+    padding: 50px;
+    background-color: beige;    
+}
+
+#form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    gap: 10px;
+}
+
+.form-div {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+}
+
+#submit-div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .hidden {
@@ -22,15 +40,18 @@ body {
 }
 
 .library-display {
+    max-width: 80%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     gap: 5px;
+    flex-wrap: wrap;
 }
 
 .card {
     border: 1px solid red;
     padding: .25rem;
+    flex: 1 1 auto;
 }
 
 footer {
